--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "laravel-vite-plugin": "^1.2.0",
     "tailwindcss": "^4.0.9",
     "vite": "^6.2.0"
+  },
+  "dependencies": {
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   }
 }
